lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:17: error: type mismatch;
 found   : Double
 required: Int
  	descend(fin(1))
                   ^Lander:23: error: value =- is not a member of Int
		sens=-1
                    ^